# openGL_fundaments_lab1

./: .gitignore  CMakeLists.txt  run.sh
lab1/: lab1_triangle.cpp  lab1_triangle.frag  lab1_triangle.vert  lab1_window.cpp
